2009-06-10 fabien
* Payroll Service is now replaced by Service

2009-05-18 yusei
* Fix some proxy fields. count_method should not be inherited from template field and proxy_listbox_ids had to be copied to new proxified fields but it was not copied.

2009-05-11 yusei
* Bump up the version.
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-03-16 fabien
* add a field version on Pay Sheet Model
* use new methods from PaySheetModel class

2009-03-10 fabien
* fix some minor problems
* add a default action on Pay Sheet Transaction portal type to be able to print a Payslip
* add AsODT and AsODTStyles files
* increment version number because of the new style of the payslip

2009-02-26 fabien
* update PaySheetTransaction_view and PaySheetModel_view to display payment_condition_payment_date only if cutom payment_condition_trade_date is selected.

2009-02-04 fabien
* when a specialise model is defined on a paysheet, apply it automatically
* rewrite the apply model script
* add some proxy listbox ids

2009-01-28 fabien
* remove some unused script and refeactor some very similar scripts in a generic one

2009-01-21 fabien
* remove unused field base_amount_list
* change error messages in PaySheetTransaction_checkParameters to be consistant with other translations
* translate a message in PaySheetModelLine_asCellRange

2009-01-16 fabien
* add a checkbox on Pay Sheet Model Line to create or not the related Pay Sheet Line

2009-01-15 fabien
* update bt format
* change the related key because of the changes of uses of base_amount
* Add base_application_list and base_contribution_list fields on PaySheetModelLine_view and remove base_amount on PaySheetModelLine and Payroll services

2008-09-16 Kazuhiko
* revise pay_sheet_transaction_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Pay Sheet Transaction.

2008-09-04 yusei
* Update English messages.
