@@ -58,7 +58,7 @@
   all their usefull information that permit to display a popup\n
   to edit them.\n
   In base cases, only \'Monthly Labour\' model line is editable (without any\n
-  tax_category or slice)\n
+  contribution_share or slice)\n
 """\n
 \n
 from Products.ERP5Type.Utils import cartesianProduct\n
@@ -99,8 +99,8 @@ for model_line in model_line_list:\n
   if cartesian_product == [[]]: \n
     share_dict = {}\n
     if 0:\n
-      share_dict[cell.getTaxCategory()+\'_price\'] = 0\n
-      share_dict[cell.getTaxCategory()+\'_quantity\'] = 0\n
+      share_dict[cell.getContributionShare()+\'_share_price\'] = 0\n
+      share_dict[cell.getContributionShare()+\'_share_quantity\'] = 0\n
     continue\n
 \n
   for tuple in cartesian_product:\n
@@ -122,8 +122,8 @@ for model_line in model_line_list:\n
     price = cell.getPrice()\n
     if price is None:\n
       price = 1\n
-    share_dict[cell.getTaxCategory()+\'_price\'] = price\n
-    share_dict[cell.getTaxCategory()+\'_quantity\'] = quantity\n
+    share_dict[cell.getContributionShare()+\'_share_price\'] = price\n
+    share_dict[cell.getContributionShare()+\'_share_quantity\'] = quantity\n
 \n
     tuple_dict = {}\n
     for item in tuple:\n
