@@ -64,11 +64,11 @@ movement_list = context.getMovementList(portal_type=(\'Pay Sheet Line\', \'Pay S
 for movement in movement_list:\n
   if base_contribution is not None and movement.isMemberOf(base_contribution):\n
 \n
-    # base_contribution is mandatory, but not tax_category. If tax_category is\n
+    # base_contribution is mandatory, but not contribution_share. If contribution_share is\n
     # given, search with it, if not, care only about base_contribution\n
-    if tax_category is not None and movement.isMemberOf(tax_category):\n
+    if contribution_share is not None and movement.isMemberOf(contribution_share):\n
       total_price += movement.getTotalPrice()\n
-    elif tax_category is None or len(movement.getTaxCategoryList()) == 0:\n
+    elif contribution_share is None or len(movement.getContributionShareList()) == 0:\n
       total_price += movement.getTotalPrice()\n
 \n
 \n
@@ -87,7 +87,7 @@ return amount\n
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>base_contribution=None, tax_category=None</string> </value>
+            <value> <string>base_contribution=None, contribution_share=None</string> </value>
         </item>
         <item>
             <key> <string>errors</string> </key>
@@ -114,7 +114,7 @@ return amount\n
                         <value>
                           <tuple>
                             <string>base_contribution</string>
-                            <string>tax_category</string>
+                            <string>contribution_share</string>
                             <string>total_price</string>
                             <string>_getattr_</string>
                             <string>context</string>
